beta.destinyitemmanager.com - Incorrect wrapping causing overlapping on items
Categories
(Core :: Layout: Grid, defect, P1)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr115 | --- | unaffected |
| firefox-esr128 | --- | unaffected |
| firefox133 | --- | unaffected |
| firefox134 | + | fixed |
| firefox135 | --- | fixed |
People
(Reporter: rbucata, Assigned: TYLin)
References
(Regression, )
Details
(Keywords: regression, webcompat:platform-bug, webcompat:site-report, Whiteboard: [webcompat-source:web-bugs], [wptsync upstream])
User Story
platform:windows,mac,linux,android impact:content-missing configuration:general affects:all branch:release diagnosis-team:layout
Attachments
(5 files)
Environment:
Operating system: Windows 10
Firefox version: Firefox 134.0
Steps to reproduce:
- Navigate to: https://jeffgca.github.io/dim-fx-bug/
- Observe the layout of items
https://github.com/DestinyItemManager/DIM/issues/10820
Expected Behavior:
Items are correctly wrapped
Actual Behavior:
Items are overlapped
Notes:
- Reproduces regardless of the status of ETP
- Reproduces in firefox-nightly, and firefox-release
- Does not reproduce in chrome
Created from https://github.com/webcompat/web-bugs/issues/144955
| Reporter | ||
Comment 1•1 year ago
|
||
The icons inside the items seem broken as well, as Chrome show empty rectangles. If a new, separate bug is to be submitted, please let me know
| Reporter | ||
Updated•1 year ago
|
| Reporter | ||
Comment 2•1 year ago
|
||
Comment 3•1 year ago
|
||
Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=fc9552282ebd73c732e2e9ba46b9a84839ef02de&tochange=4f3dfc147a61ef539dee209d16ebf92bdfd3f656
Comment 4•1 year ago
|
||
Since nightly and release are affected, beta will likely be affected too.
For more information, please visit BugBot documentation.
Comment 5•1 year ago
|
||
Set release status flags based on info from the regressing bug 1930672
:TYLin, since you are the author of the regressor, bug 1930672, could you take a look? Also, could you set the severity field?
For more information, please visit BugBot documentation.
Updated•1 year ago
|
Comment 6•1 year ago
|
||
The empty icon boxes are just due to a missing font - the repro could be minimized further, but the important issue is the overlapping boxes containing the icons due to an incorrect width calculation.
Updated•1 year ago
|
Comment 7•1 year ago
|
||
Comment 8•1 year ago
|
||
possible site-side workaround:
If anyone here happens to be a developer on the site or be in touch with the developers, this seems to be an effective workaround:
.sub-bucket {
min-width: 0;
}
The issue here is that Firefox is resolving too large of an automatic minimum width and refusing to shrink the "sub-bucket" grid (which itself is a flex item) because we're running into what-we-think-is-its-minimum-size.
If we allow it to shrink, though (e.g. via that min-width), then everything appears to work out just fine.
And from some brief testing, I don't think this css rule impacts the sizing in Chrome at all, which is good (in the sense of it being a harmless workaround).
Comment 9•1 year ago
|
||
Updated•1 year ago
|
Comment 10•1 year ago
|
||
[Tracking Requested - why for this release]: regression that's made it to beta, causing overlapping content, that would ideally be good to avoid shipping.
TYLin: it looks like the regressor (bug 1930672) was pretty targeted -- perhaps we should request a backout from beta, to have more time to investigate/address this bug here before it hits release?
Comment 11•1 year ago
|
||
Important correction for tracking/prioritization/next-action purposes:
(In reply to Raul Bucata from comment #0)
Notes:
- Reproduces regardless of the status of ETP
- Reproduces in firefox-nightly, and firefox-release
This actually does not reproduce in firefox-release, at least not for me (not yet). Per regression window in comment 3, this regressed from a patch in bug 1930672 that is currently included in 134 (current beta) but was not included in 133 (current release).
(It looks like this matches the original reporter's experience, too -- in https://github.com/webcompat/web-bugs/issues/144955#issuecomment-2526270353 they show a screenshot of nightly 135 with overlap, followed by Chrome with no overlap and release 133 with no overlap.)
Comment 12•1 year ago
|
||
[Morphing into a regular platform bug, since this is a regression rather than a longstanding webcompat issue.]
| Assignee | ||
Comment 13•1 year ago
|
||
This reverts commit https://hg.mozilla.org/mozilla-central/rev/4f3dfc147a61
after resolving the code conflict with Bug 1933101 Part 2
https://hg.mozilla.org/mozilla-central/rev/03da611d9c58
Updated•1 year ago
|
Comment 14•1 year ago
|
||
I’m the original reporter of the webcompat bug and that’s correct, I wasn’t able to reproduce in current release version. Not sure where that crept in - the upstream bug for the site was reported 12 days ago:
https://github.com/DestinyItemManager/DIM/issues/10820
( DIM is a website companion app for a major online game, for some context )
| Assignee | ||
Comment 15•1 year ago
|
||
flex-item-grid-container-auto-repeat-001.html is adapted from Daniel Holbert's
reduced testcase in Bug 1936276 Comment 9.
flex-item-grid-container-auto-repeat-002.html is identical to 001.html except
that the width of .item-grid-container are set to a pixel value rather than
a percentage values. This test has failed before introducing the regression.
| Assignee | ||
Updated•1 year ago
|
Comment 16•1 year ago
|
||
Comment 18•1 year ago
|
||
(ni=tylin as a reminder to request beta uplift when possible [after it lands on central], to avoid shipping this regression in 134. Thanks!)
Comment 19•1 year ago
|
||
(In reply to jeff from comment #14)
I’m the original reporter of the webcompat bug and that’s correct, I wasn’t able to reproduce in current release version. Not sure where that crept in - the upstream bug for the site was reported 12 days ago:
Thanks for the upstream bug reference!
We did manage to track down where the bug crept in, and probably it'll be fixed in tomorrow's Nightly build. (and hopefully fixed in Firefox Beta 134 within a week or maybe sooner, depending on beta update timelines etc)
Comment 20•1 year ago
|
||
(In reply to Daniel Holbert [:dholbert] from comment #18)
(ni=tylin as a reminder to request beta uplift when possible [after it lands on central], to avoid shipping this regression in 134. Thanks!)
Aha, I see we backed out on beta already here:
https://bugzilla.mozilla.org/show_bug.cgi?id=1930672#c11
(The process was just slightly different for trunk because of the merge conflict, which is why we had the custom patch here.)
So we can consider Firefox 134beta fixed-by-backout, I think (just as 135 will be fixed-by-backout as soon as the patch merges from autoland to central).
Comment 21•1 year ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/d5e36f13e8cd
https://hg.mozilla.org/mozilla-central/rev/bea77c09d334
Updated•1 year ago
|
Description
•