Bug 1936276 - Revert Bug 1930672 to fix the overlapping icons on beta.destinyitemmanager.com. r=layout-reviewers,dholbert

This reverts commit https://hg.mozilla.org/mozilla-central/rev/4f3dfc147a61
after resolving the code conflict with Bug 1933101 Part 2
https://hg.mozilla.org/mozilla-central/rev/03da611d9c58

Differential Revision: https://phabricator.services.mozilla.com/D231879